Cambio de titulos

--- a/ejercicio_2.5
+++ b/ejercicio_2.5
@@ -6,8 +6,11 @@ Algoritmo calculadora
 	resultado <- 0
 	opc <- ""
 	calculo <- ""
-	
+	Escribir "************************"
+	Escribir "** Calculadora B‡sica **"
+	Escribir "************************"
 	Repetir 
+
 		Escribir "Algoritmo para una calculadora: "
 		Escribir "Dime el primer nœmero"
 		Leer numero_1
